[package]
name = "sb_v2"
version = "0.1.0"
authors = ["L3afMe <L3afMeAlon3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.8"
typemap = "0.3.3"
meval = "0.2.0"
futures = "0.3.9"
rand = "0.8.1"
log = "0.4.11"
env_logger = "0.8.2"
urlencoding = "1.1.1"
serde-xml-rs = "0.4.1"
urban-rs = "0.1.1"
once_cell = "1.5.2"
regex = "1.4.3"

[dependencies.serenity_utils]
# path = "../serenity-utils-selfbot-support"
git = "https://github.com/L3afMe/serenity-utils-selfbot-support"

[dependencies.tokio]
version = "0.2"
features = ["fs", "io-std", "io-util", "macros", "rt-core", "rt-threaded", "sync", "time"] 

[dependencies.serenity]
git = "https://github.com/L3afMe/serenity-selfbot-support"
features = [
    "framework",
    "standard_framework",
    "rustls_backend",
]
