[package]
name = "inori-rs"
version = "0.1.3-beta.3"
authors = ["L3afMe <L3afMeAlon3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cache = ["serenity/cache"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.8"
typemap = "0.3.3"
meval = "0.2.0"
rand = "0.8.1"
log = "0.4.11"
urlencoding = "1.1.1"
serde-xml-rs = "0.4.1"
urban-rs = "0.1.1"
once_cell = "1.5.2"
regex = "1.4.3"
async-trait = "0.1.42"
base64 = "0.13.0"
fern = "0.6.0"
chrono = "0.4.19"
colored = "2.0.0"
colorsys = "0.6.0"
semver = "0.11.0"
brainfrick = "1.1.2"

[dependencies.serenity_utils]
git = "https://github.com/L3afMe/serenity-utils-selfbot-support"

[dependencies.tokio]
version = "0.2"
features = ["fs", "io-std", "io-util", "macros", "rt-core", "rt-threaded", "sync", "time"] 

[dependencies.serenity]
git = "https://github.com/L3afMe/serenity-selfbot-support"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
